log/build_2026-03-14_00-59-11/sorting_executor_py/stderr.log
  File "/home/rcli/ws_sorting_final/install/sorting_executor_py/lib/python3.12/site-packages/sorting_executor_py/sorting_executor.py", line 75
    return pose
    ^^^^^^^^^^^
SyntaxError: 'return' outside function

